removing README.md was good, and added ' (blogs)' to this page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="links">
         <ul>
             <li><a href="https://peithonking.github.io/portfolio-page/">Personal Portfolio Website</a></li>
-            <li><a href="https://peithonking.github.io/my_blogs/">PeithonKing's Thoughts</a></li>
+            <li><a href="https://peithonking.github.io/my_blogs/">PeithonKing's Thoughts (blogs)</a></li>
         </ul>
     </div>
 </body>
